--- a/style.css
+++ b/style.css
@@ -1,54 +1,35 @@
-#box
+#penal ,#flip
 {
-    background-color: pink;
-    color: black;
-    border: 5px solid black;
-}#box1
-{
-    background-color: pink;
-    color: black;
-    border: 5px solid black;
-}
-
-
-#penal , #flip
-{
-    background: rgb(58, 86, 180);
-    color: white;
-    border: 1px solid rebeccapurple;
-    position: relative;
+    padding: 5px;
+    font-size: 18px;
     text-align: center;
-    height: 50px;
-
+    background-color: #555;
+    color: white;
+    border: 1px soild #666;
+    border-radius: 3px;
 }
 #penal
 {
     padding: 50px;
     display: none;
 }
-#box3
+#list1
 {
-    position: relative;
-    height: 100px;
-    width: 100px;
-    border: 1px;
-    /* border-radius: 50%; */
-    background: goldenrod;
+    padding: 5px;
+    font-size: 18px;
     text-align: center;
-    color: whitesmoke;
+    background-color: #555;
+    color: white;
+    border: 1px soild #666;
+    border-radius: 3px;
 }
-#cont
+
+#box
 {
-    background: transparent;
-}
-#box4
-{
-    position: relative;
+    position: fixed;
+    left:50px;
+    top: 50px;
+    width: 200px;
     height: 100px;
-    width: 100px;
-    border: 1px;
-    /* border-radius: 50%; */
-    background: goldenrod;
-    text-align: center;
-    color: whitesmoke;
+    background: yellowgreen;
 }
