--- a/image.css
+++ b/image.css
@@ -1,28 +1,63 @@
-body
-{
-    background: #333;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-a
-{
-    color: #fff;
-    text-decoration: none;
-    overflow: auto;
+
+.container {
+    display: flex;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
 }
-.slider-inner
-{
-    width: 250px;
-    height: 470px;
-    position: relative;
+
+.outer {
+    width: 600px;
     overflow: hidden;
+}
+
+.inner {
+    width: 500%;
+    height: 100%;
+    position: relative;
+
+}
+
+.slide {
+    width: 21%;
+    height: 100%;
     float: left;
-    padding: 3px;
-    border: #666 solid 1px;
+    align-items: center;
 }
-.slider-inner img
-{
-    display: none;
+
+
+.button1 {
+
+    position: absolute;
 }
-.slider-inner img.active
- {
-   display: inline-block;
+
+.button2 {
+    position: absolute;
+
+}
+
+.left {
+    cursor: pointer;
+}
+
+.right {
+    right: 27%;
+    cursor: pointer;
+}
+
+button {
+   
+    text-align: center;
+    position: absolute;
+    top: 125px;
+    right: 138px;
+    font-size: 16px;
+    cursor: pointer;
 }
